[tool.poetry]
name = "ws-example"
version = "0.1.0"
description = ""
authors = ["pedro rivera <ppsirg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
